# 2020-Autumn-Introduction-to-Computer-Graphics

./: README.md
HW1/CG_hw1/: CMakeLists.txt  Object.cpp  main.cpp
HW2/CG_hw2/: CMakeLists.txt  Object.cpp  main.cpp
HW2/CG_hw2/include/: Object.h  shader.h
HW2/CG_hw2/shaders/: fragmentShader.frag  vertexShader.vert
HW3/: readme.txt
HW3/CG_hw3/: CMakeLists.txt  main.cpp
HW3/CG_hw3/shaders/: Edgeshading.frag  Edgeshading.vert  Phongshading.frag  Toonshading.frag  Toonshading.vert
HW4/: Youtube_link.txt  readme.md
HW4/CG_hw4/: main.cpp
HW4/CG_hw4/shaders/: explosion.geom  explosion.vert  heartbeat.frag  heartbeat.geom  heartbeat.vert
